# egg_cp

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  build_docker.sh  call.sh  dockerrun.sh  summary.py
data/own/: .gitignore  pulse_50k.csv  pulse_5k.csv  simpl_50k.csv  simpl_5k.csv
src/: logger.rs  main.rs  math.rs  rules.rs  simplify.rs
src/dataset/: mod.rs
